k8s/arcx-public-ui-app-prd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcx-public-ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcx-public-ui-app

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: arcx-public-ui-app
    spec:
      securityContext:
        runAsUser: 555
        runAsGroup: 555
        fsGroup: 555
      containers:
      - name: app
        image: $CI_REGISTRY_IMAGE/public-ui-app:$CI_COMMIT_TAG
        imagePullPolicy: Always
        livenessProbe:
         tcpSocket:
            port: 8080
         initialDelaySeconds: 10
         periodSeconds: 15
        readinessProbe:
         tcpSocket:
            port: 8080
         initialDelaySeconds: 15
         periodSeconds: 10
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: glcr-auth
---

apiVersion: v1
kind: Service
metadata:
  name: arcx-public-ui-app-service
spec:
  ports:
  - port: 8080
  selector:
    app: arcx-public-ui-app
