k8s/arcx-public-ui-prd-web.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcx-public-ui-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcx-public-ui-web

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: arcx-public-ui-web
    spec:
      containers:
      - name: web
        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: glcr-auth

---

apiVersion: v1
kind: Service
metadata:
  name: arcx-public-ui-web-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 80
    name: https

  selector:
    app: arcx-public-ui-web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcx-public-ui-web-ingress
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    nginx.ingress.kubernetes.io/auth-tls-secret: ${KUBE_NAMESPACE}/arcx-tls-cert
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: climateadaptation.epa.gov
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arcx-public-ui-web-service
            port :
              number: 443
  tls:
  - hosts:
    - climateadaptation.epa.gov
    secretName: arcx-tls-cert
