k8s/arcx-public-ui-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcx-public-ui-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcx-public-ui-web

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: arcx-public-ui-web
    spec:
      containers:
      - name: web
        image: $CI_REGISTRY_IMAGE/public-ui-web:$CI_COMMIT_REF_SLUG
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: glcr-auth

---

apiVersion: v1
kind: Service
metadata:
  name: arcx-public-ui-web-service
spec:
  ports:
  - port: 80
  selector:
    app: arcx-public-ui-web

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arcx-public-ui-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arcx-development-public-ui.devsecops-eval.epa.gov
    http:
      paths:
      - backend:
          serviceName: arcx-public-ui-web-service
          servicePort: 80
